<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primary"
    android:layout_marginBottom="80dp"
    tools:context="HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_example"
                    android:textColor="@color/muted"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/hm_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/welcome_message"
                    android:textColor="@color/textPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <ImageView
                android:id="@+id/profile_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_notif"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:contentDescription="Profile icon"
                android:background="@drawable/circle_bg"
                android:layout_marginStart="12dp"/>
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Today's Progress"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/textPrimary" />

                    <TextView
                        android:id="@+id/tv_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:paddingTop="6dp"
                        android:textColor="@color/accent" />

                    <TextView
                        android:id="@+id/tv_completed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 of 0 Habits completed"
                        android:textSize="13sp"
                        android:paddingTop="6dp"
                        android:textColor="@color/muted" />
                </LinearLayout>


                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_bar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:indicatorSize="60dp"
                    app:trackThickness="8dp"
                    app:indicatorColor="@color/accent"
                    app:trackColor="@color/soft_blue_gray"
                    android:layout_marginStart="12dp"
                    android:max="100"
                    android:progress="0"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/accent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/tv_motivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Stay motivated!"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tv_motivation_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motivation_sub"
                    android:textSize="14sp"
                    android:textColor="@color/off_white"
                    android:layout_marginTop="8dp"
                    android:gravity="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_mood"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_latest_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="none"
                    android:textSize="16sp"
                    android:textColor="@color/textPrimary"
                    android:padding="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_hyd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydration_reminders"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/textPrimary"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:id="@+id/tv_hydrationn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/icon_hydration"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_water"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:background="@drawable/circle_bg"
                    android:contentDescription="Water icon" />


                <TextView
                    android:id="@+id/tv_hydration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="disabled"
                    android:textSize="16sp"
                    android:textColor="@color/textPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_mood_trend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_chart"
                    android:background="@drawable/circle_bg"
                    android:scaleType="centerInside"
                    android:padding="8dp"
                    android:contentDescription="Mood Trend Icon" />

                <TextView
                    android:id="@+id/btn_mood_trend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_mood_trends"
                    android:textSize="16sp"
                    android:layout_marginStart="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/textPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>
